[metadata]
name = protis
version = 1.0.0
author = Benjamin Vial
email = benjamin.vial84@gmail.com
description = Plane Wave Expansion method for photonic crystals
url = https://gitlab.com/protis/protis
project_urls =
    Code=https://gitlab.com/protis/protis
    Documentation=https://protis.gitlab.io
    Issues=https://gitlab.com/protis/protis/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities
keywords =
    plane wave expansion
    photonic crystals
    metamaterials
    band diagram

[options]
packages = find:
install_requires =
    nannos >= 2.6.0
    scikit-image
    pyvista[jupyter]
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
dependency_links = 
    https://storage.googleapis.com/jax-releases/jax_releases.html
    https://storage.googleapis.com/jax-releases/jax_cuda_releases.html

[options.extras_require]
magma = nannos[magma]
gpu = nannos[gpu]
backends = nannos[backends]
opt = nlopt
all = 
    protis[backends]
    protis[gpu]
    protis[magma]
    protis[opt]